--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aQJEil"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aQJEil" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=quv2Pn"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=quv2Pn" type="text/css">
 
   
   
@@ -40,8 +40,8 @@
                 </div>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Welcome to our Parish</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-7"><em>The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus' Church.</em><br><br><strong>Regular Weekend Masses</strong><br>Saturday Vigil | 5.30pm<br>Sunday | 7.30am &amp; 9.30am<br><br><strong>Regular Weekday Masses:</strong><br>Tuesday | 12.30pm Mass<br>Wednesday | 12.00pm Rosary | 12.30pm Mass<br>Thursday | 12.30pm Mass<br>Friday | 11.30am Eucharistic Holy Hour | 12.30pm Mass<br><br><strong>Reconciliation</strong><br>Saturday | 4.30pm - 5.00pm</p><p><br><br><br><br></p><p></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#content3-6">Bulletins</a> <a class="btn btn-success display-4" href="index.html#content3-21">Newsletters</a> 
-                    <a class="btn btn-primary-outline display-4" href="index.html#form5-7">Contact Us &gt;</a> <a class="btn btn-primary-outline display-4" href="index.html#form5-7"></a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#content3-6">Bulletins</a> <a class="btn btn-success display-4" href="index.html#content3-21">Newsletters</a> <a class="btn btn-danger display-4" href="baptism.html" target="_blank">Baptisms</a> <a class="btn btn-secondary display-4" href="marriage.html#header14-t" target="_blank">Weddings</a> 
+                    <a class="btn btn-primary-outline display-4" href="index.html#form5-7">Contact Us &gt;</a>  <a class="btn btn-primary-outline display-4" href="index.html#form5-7"></a></div>
             </div>
         </div>
     </div>
@@ -292,7 +292,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="oef7MkdEdw9Ay4OHeb55CoJJKRMGUaCMigfxkfRDl3toXsFdR5C7mBuo7DPGn4LB83H+xSWT+JFNty6xVhFnDjk5yhbZduIdMmmuV7ZRycV9eKi4kiVST6ix5uUBtKH2">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wEg0A1iE4YCUj5vnwI7+Q+w12FjRIV30NytTm3QZFfSJFIiFH9SNbUwA4+ONDEYQ0P6/g+4gEa8xITjxg8b9JuvJSs+gYsptYS8TzymFbcw+NRPNhirQdvbgjvYEZznc">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -389,7 +389,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
