--- a/marriage.html
+++ b/marriage.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=msX7w8"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=msX7w8" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=37RXrT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=37RXrT" type="text/css">
 
   
   
@@ -61,8 +61,8 @@
                     Information</strong></h6>
             </div>
             <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-7">Book the date and time at least one year prior to your marriage. At St Thomas the charge for the use of the Church is $300. <br><br>$100 (non-refundable) is to be paid shortly after the initial booking is made in order that the booking can be confirmed, with the balance of $200 to be paid o<strong>ne month prior</strong> to the marriage taking place.
-<br><br>While there is never a charge for Sacraments, an honorarium to the celebrant is expected along the lines of a civil celebrant. As a guide, the cost of Registry Office weddings is $300.&nbsp;<br></p>
+                <p class="mbr-text mbr-fonts-style display-7">In order to properly prepare for your marraige, please try to book the date and time for your wedding at least one year prior to your marriage. At St Thomas the charge for the use of the Church is $500. <br><br>$200 (non-refundable) is to be paid shortly after the initial booking is made in order that the booking can be confirmed, with the balance of $300 to be paid o<strong>ne month prior</strong> to the marriage taking place.
+<br><br>While there is never a charge for Sacraments, an honorarium to the celebrant is expected along the lines of a civil celebrant. As a guide, the cost of Registry Office weddings is $300.&nbsp;<br><br><br></p>
             </div>
         </div>
     </div>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="text-box">
                         <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Baptism Certificate</strong></h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">This must have been issued in the past six months and is available from the parish where you were baptised.&nbsp;</h5>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">If you don't have a copy, please request one from the parish where you were baptised.&nbsp;</h5>
                     </div>
                 </div>
                 <div class="item mbr-flex">
@@ -112,7 +112,7 @@
                     </div>
                     <div class="text-box">
                         <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>International passports</strong></h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">If the person is not Australian by birth, proof of Australian citizenship or a visa is required.</h5>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">If a party to the marriage is not Australian by birth, proof of Australian citizenship or a visa is required.</h5>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Preparation is a necessary part of every important thing we do and marriage is no different.</strong> Much time and effort usually go toward the planning and organising the wedding day, so too, preparation for the lifetime of marriage that comes after the wedding is an important part of being engaged.  Please contact the Catholic Marriage Education Services on 9241 5000 or webpage: www.cfms.org.au to arrange enrolment in the next available course. <br><br>The course will involve some input, individual reflections, couple sharing and group discussions.
 <br>
-<br>You will also be required to meet with Fr Wayne, our Parish Priest of St Thomas.</p>
+<br>You will also be required to meet with Fr Garner Vergara (our Parish Priest) or Dcn Paul Reid (our Parish Decaon).</p>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                             <div id="collapse4_16" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       You will need to arrange for your own florist to provide and arrange the flowers for your wedding.  Any queries concerning what is permissible with regards to floral arrangements in the Church are to be directed to Prue Pupazzoni, the Parish Secretary (contactable <a href="index.html#form5-7" class="text-primary"><strong>here</strong></a>).<br><br><strong>You are required to leave at least one floral arrangement</strong> on the Church Sanctuary after your wedding so that there will be flowers for the weekend Masses which are to follow.</p>
+                                       You will need to arrange for your own florist to provide and arrange the flowers for your wedding.  Any queries concerning what is permissible with regards to floral arrangements in the Church are to be directed to Jackie de Jong, the Parish Secretary (contactable <a href="index.html#form5-7" class="text-primary"><strong>here</strong></a>).<br><br><strong>You are required to leave at least one floral arrangement</strong> on the Church Sanctuary after your wedding so that there will be flowers for the weekend Masses which are to follow.</p>
                                 </div>
                             </div>
                         </div>
