--- a/marriage.html
+++ b/marriage.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JXh7zD"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JXh7zD" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=c23RVW"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=c23RVW" type="text/css">
 
   
   
